# cwa

./: .gitignore  CLAUDE.md  Cargo.toml  PROJECT.md  README.md  install.sh
.claude/commands/: cwa-commit.md  cwa-commitpush.md
assets/web/: index.html
crates/cwa-cli/: Cargo.toml
crates/cwa-cli/src/: main.rs  output.rs
crates/cwa-cli/src/commands/: analyze.rs  clean.rs  codegen.rs  context.rs  design.rs  domain.rs  git.rs  graph.rs  infra.rs  init.rs  mcp.rs  memory.rs  mod.rs  serve.rs  spec.rs  stack.rs  task.rs  tokens.rs  update.rs
crates/cwa-codegen/: Cargo.toml
crates/cwa-codegen/src/: agents.rs  claude_md.rs  commands.rs  design_system.rs  hooks.rs  lib.rs  mcp_config.rs  skills.rs  tech_agents.rs
crates/cwa-codegen/src/templates/agents/common/: ddd-expert.md  docker-expert.md  htmx-expert.md  kanban-manager.md  memory-observer.md  security-expert.md  shadcn-ui-expert.md  spec-reviewer.md  tailwindcss-expert.md  tdd-expert.md
crates/cwa-codegen/src/templates/agents/elixir/: ecto-expert.md  elixir-ai-expert.md  elixir-expert.md  liveview-expert.md  phoenix-expert.md
crates/cwa-codegen/src/templates/agents/python/: fastapi-expert.md  python-ai-expert.md  python-expert.md
crates/cwa-codegen/src/templates/agents/rust/: axum-expert.md  rust-ai-expert.md  rust-expert.md  sqlx-expert.md  tokio-expert.md
crates/cwa-codegen/src/templates/agents/typescript/: bun-expert.md  nextjs-expert.md  react-expert.md  typescript-expert.md  vite-expert.md
crates/cwa-core/: Cargo.toml
crates/cwa-core/src/: error.rs  lib.rs  notifier.rs
crates/cwa-core/src/analysis/: mod.rs  model.rs
crates/cwa-core/src/board/: mod.rs  model.rs
crates/cwa-core/src/decision/: mod.rs  model.rs
crates/cwa-core/src/design/: mod.rs  model.rs  vision.rs
crates/cwa-core/src/domain/: mod.rs  model.rs
crates/cwa-core/src/memory/: mod.rs  model.rs  observation.rs
crates/cwa-core/src/project/: mod.rs  model.rs  scaffold.rs
crates/cwa-core/src/spec/: mod.rs  model.rs  parser.rs
crates/cwa-core/src/task/: mod.rs  model.rs
crates/cwa-db/: Cargo.toml
crates/cwa-db/src/: broadcast.rs  lib.rs  pool.rs
crates/cwa-db/src/migrations/: 002_boards_cards.sql  003_memories_sync.sql  004_design_systems.sql  005_observations.sql  006_memories_entry_type.sql  mod.rs  schema.sql
crates/cwa-db/src/queries/: boards.rs  decisions.rs  design_systems.rs  domains.rs  memory.rs  mod.rs  observations.rs  projects.rs  specs.rs  tasks.rs
crates/cwa-embedding/: Cargo.toml
crates/cwa-embedding/src/: domain_object.rs  hybrid.rs  lib.rs  memory.rs  observation.rs  ollama.rs  qdrant.rs  search.rs
crates/cwa-graph/: Cargo.toml
crates/cwa-graph/src/: client.rs  hyperedge.rs  lib.rs  schema.rs
crates/cwa-graph/src/queries/: explore.rs  impact.rs  mod.rs  search.rs
crates/cwa-graph/src/sync/: decision_sync.rs  design_sync.rs  domain_sync.rs  kanban_sync.rs  memory.rs  mod.rs  spec_sync.rs
crates/cwa-mcp/: Cargo.toml
crates/cwa-mcp/src/: lib.rs  notifier.rs  planner.rs  planner_template.rs  server.rs
crates/cwa-redis/: Cargo.toml
crates/cwa-redis/src/: broadcast.rs  client.rs  lib.rs
crates/cwa-redis/src/queries/: boards.rs  decisions.rs  domains.rs  glossary.rs  memory.rs  mod.rs  observations.rs  projects.rs  specs.rs  tasks.rs
crates/cwa-token/: Cargo.toml
crates/cwa-token/src/: analyzer.rs  lib.rs  optimizer.rs  reporter.rs
crates/cwa-web/: Cargo.toml
crates/cwa-web/src/: lib.rs  state.rs  websocket.rs
crates/cwa-web/src/routes/: board_html.rs  context.rs  dashboard.rs  decisions.rs  domains.rs  internal.rs  mod.rs  specs.rs  tasks.rs
crates/cwa-web/templates/: base.html  board.html
crates/cwa-web/templates/partials/: card.html  column.html
docker/: .env.example  docker-compose.yml
docker/neo4j/conf/: neo4j.conf
docker/scripts/: init-neo4j.cypher  init-qdrant.sh
scripts/: cwa-commit  cwa-git
