[package]
name = "cwa"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cwa"
path = "src/main.rs"

[dependencies]
cwa-core = { workspace = true }
cwa-db = { workspace = true }
cwa-graph = { workspace = true }
cwa-embedding = { workspace = true }
cwa-codegen = { workspace = true }
cwa-token = { workspace = true }
cwa-mcp = { workspace = true }
cwa-web = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
