[package]
name = "cwa-codegen"
description = "Claude Code artifact generation for CWA"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cwa-core = { workspace = true }
cwa-db = { workspace = true }
tera = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
