[package]
name = "cwa-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cwa-redis = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
