[package]
name = "cwa-graph"
description = "Neo4j Knowledge Graph integration for CWA"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cwa-db = { workspace = true }
redis = { workspace = true }
neo4rs = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
