[package]
name = "cwa-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cwa-core = { workspace = true }
cwa-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
