[package]
name = "cwa-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cwa-core = { workspace = true }
cwa-db = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
